<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.example.android.udacityshoestoe.models.ModelShoe" />

    </data>
<!--use constraint bec it is more easy to handle many views-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop70"
        android:padding="@dimen/smallPadding">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sixMargin"
            android:background="@color/yellow"
            android:elevation="@dimen/elevation"
            app:cardCornerRadius="@dimen/cornerRadius"
            app:cardElevation="@dimen/cardElvation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/brigthYellow"
                android:paddingVertical="8dp">


                <ImageView
                    android:contentDescription="@string/image"
                    android:id="@+id/iv_shoe"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:padding="@dimen/small_margin_top"
                    android:src="@drawable/img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_padding_start"
                    android:fontFamily="@font/akaya_telivigala"
                    android:text="@string/name"
                    app:layout_constraintStart_toEndOf="@id/iv_shoe"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_shoeName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/akaya_telivigala"
                    android:paddingHorizontal="@dimen/sixMargin"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:text="@={shoe.shoeName}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    tools:text="Amazing" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_padding_start"
                    android:layout_marginTop="@dimen/smallPadding"
                    android:fontFamily="@font/akaya_telivigala"
                    android:text="@string/company"
                    app:layout_constraintStart_toEndOf="@id/iv_shoe"
                    app:layout_constraintTop_toBottomOf="@id/textView" />

                <TextView
                    android:id="@+id/tv_shoeCompany"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/akaya_telivigala"
                    android:paddingHorizontal="@dimen/sixMargin"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:text="@={shoe.shoeCompany}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    tools:text="Amazing" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_padding_start"
                    android:layout_marginTop="@dimen/small_margin_top"
                    android:fontFamily="@font/akaya_telivigala"
                    android:text="@string/size"
                    app:layout_constraintStart_toEndOf="@id/iv_shoe"
                    app:layout_constraintTop_toBottomOf="@id/textView2" />

                <TextView
                    android:id="@+id/tv_shoeSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/akaya_telivigala"
                    android:paddingHorizontal="@dimen/sixMargin"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:text="@={shoe.shoeSize}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@id/textView3"
                    tools:text="Amazing" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_padding_start"
                    android:layout_marginTop="@dimen/small_margin_top"
                    android:fontFamily="@font/akaya_telivigala"
                    android:text="@string/shoes_description"
                    app:layout_constraintStart_toEndOf="@id/iv_shoe"
                    app:layout_constraintTop_toBottomOf="@id/textView3" />

                <TextView
                    android:id="@+id/tv_shoeDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/akaya_telivigala"
                    android:paddingHorizontal="@dimen/padding_horizental"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:text="@={shoe.shoeDescription}"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@id/textView4"
                    tools:text="Amazing" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>